Added categories to product data

--- a/_includes/highlights.html
+++ b/_includes/highlights.html
@@ -2,6 +2,7 @@
 <!-- Highlights -->
 <div class="row">
     {% for product in site.data.products limit:3 %}
+    {% if product.category contains 'highlight' %}
         <div class="col-lg-4 text-center">
           <img alt="140x140" data-src="holder.js/140x140" class="img-circle" style="width: 140px; height: 140px;" src="/img/{{product.img}}">
           <h2>{{ product.name }}</h2>
@@ -9,7 +10,7 @@
            <p>{{ product.price }}</p>
           <p><a class="btn btn-primary" href="{{ product.img }}" role="button">View details &raquo;</a></p>
         </div>
-
+    {% endif %}
     {% endfor %}
 </div>
 
