Started fleshing out the product detail page

--- a/_includes/list-all-categories.html
+++ b/_includes/list-all-categories.html
@@ -2,7 +2,7 @@
     {% for product in site.data.products %}
     {% cycle 'add rows': '<div class="row">', nil, nil %}
 
-        {% include product-highlight.html %}
+        {% include product.html %}
 
     {% cycle 'close rows': nil, nil, '</div>' %}
     {% endfor %}
