Shorten main menu text to limit wrapping on small screens

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -15,7 +15,7 @@
     {% else %}
     <li>
     {% endif %}
-        <a href="/handbags-and-purses/">Handbags &amp; Purses</a>
+        <a href="/handbags-and-purses/">Bags &amp; Purses</a>
     </li>
     
     {% if page.menu == "devices" %}
