--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,7 @@ body {
   background-color: #eee;
   border: 1px solid #ccc;
   border-radius: 5px;
+  font-size: 12px;
 }
 .nav-justified > li > a {
   padding-top: 15px;
