Show products in columns on tablets and up

--- a/_includes/product-highlight.html
+++ b/_includes/product-highlight.html
@@ -1,5 +1,5 @@
 
-    <div class="col-lg-4 text-center">
+    <div class="col-sm-4 text-center">
       <a href="/img/products/thumb/{{product.img}}"><img alt="140x140" data-src="holder.js/140x140" class="img-circle" style="width: 140px; height: 140px;" src="/img/products/thumb/{{product.img}}"></a>
       <h2>{{ product.name }}</h2>
        <p>{{ product.preamble }}</p>
