--- a/_includes/product-highlight.html
+++ b/_includes/product-highlight.html
@@ -1,8 +1,17 @@
 
     <div class="col-sm-4 text-center">
-      <a href="/img/products/thumb/{{product.img}}"><img alt="140x140" data-src="holder.js/140x140" class="img-circle" style="width: 140px; height: 140px;" src="/img/products/thumb/{{product.img}}"></a>
+      <a href="/img/products/thumb/{{product.img}}">
+        <img alt="{{ product.name }}"
+             class="img-circle"
+             style="width: 140px; height: 140px;"
+             src="/img/products/thumb/{{product.img}}" />
+      </a>
       <h2>{{ product.name }}</h2>
-       <p>{{ product.preamble }}</p>
-       <p>{{ product.price }}</p>
-      <p><a class="btn btn-primary" href="/img/products/thumb/{{product.img}}" role="button">View details &raquo;</a></p>
+        <p>{{ product.preamble }}</p>
+        <p>{{ product.price }}</p>
+        <p>
+          <a class="btn btn-primary"
+             href="/img/products/thumb/{{product.img}}"
+             role="button">View details &raquo;</a>
+        </p>
     </div>
