--- a/_includes/product-detail.html
+++ b/_includes/product-detail.html
@@ -1,9 +1,40 @@
 
-    <div>
-      <a href="/img/products/thumb/{{product.img}}"><img alt="140x140" data-src="holder.js/140x140" class="img-thumbnail" style="width: 140px; height: 140px;" src="/img/products/thumb/{{product.img}}"></a>
-      <h2>{{ product.name }}</h2>
-       <p>{{ product.preamble }}</p>
-       <p>{{ product.description }}</p>
-       <p>{{ product.price }}</p>
-      <p><a class="btn btn-primary" href="/img/products/thumb/{{product.img}}" role="button">View details &raquo;</a></p>
+    {% if forloop.first == false %}
+    <hr class="featurette-divider" id="{{product.id}}">
+    {% endif %}
+
+    {% capture rowcycle %}{% cycle 'odd', 'even' %}{% endcapture %}
+
+    {% capture image_div %}
+      <div class="col-md-5">
+        <img src="/img/products/thumb/{{product.img}}"
+             class="featurette-image img-responsive img-thumbnail"
+             alt="{{product.name}}"
+             style="width: 300px; height: 300px;" />
+      </div>
+    {% endcapture %}
+
+    <div class="row featurette">
+      {% if rowcycle == 'even' %}
+        {{image_div}}
+      {% endif %}
+
+      <div class="col-md-7">
+        <h2 class="featurette-heading">
+          {{product.name}}
+          <br />
+          <span class="text-muted">It'll blow your mind.</span></h2>
+        <p class="lead">{{product.preamble}}</p>
+        <p>{{product.description}}</p>
+        <p>Price: {{product.price}}</p>
+        <p>
+          <a class="btn btn-primary"
+             href="/img/products/thumb/{{product.img}}"
+             role="button">Add to basket &raquo;</a>
+        </p>
+      </div>
+
+      {% if rowcycle == 'odd' %}
+        {{image_div}}
+      {% endif %}
     </div>
