Include ID for first product on all-products page

--- a/_includes/product-detail.html
+++ b/_includes/product-detail.html
@@ -1,6 +1,8 @@
 
-    {% if forloop.first == false %}
-    <hr class="featurette-divider" id="{{product.id}}">
+    {% if forloop.first %}
+    <span id="{{product.id}}" />
+    {% else %}
+    <hr class="featurette-divider" id="{{product.id}}" />
     {% endif %}
 
     {% capture rowcycle %}{% cycle 'odd', 'even' %}{% endcapture %}
