Hook up highlight button to detail page and hide price

--- a/_includes/product-highlight.html
+++ b/_includes/product-highlight.html
@@ -8,10 +8,9 @@
       </a>
       <h2>{{ product.name }}</h2>
         <p>{{ product.preamble }}</p>
-        <p>{{ product.price }}</p>
         <p>
           <a class="btn btn-primary"
-             href="/img/products/thumb/{{product.img}}"
+             href="/product-info/#{{product.id}}"
              role="button">View details &raquo;</a>
         </p>
     </div>
