--- a/_includes/product-detail.html
+++ b/_includes/product-detail.html
@@ -25,10 +25,29 @@
         <h2 class="featurette-heading">
           {{product.name}}
           <br />
-          <span class="text-muted">It'll blow your mind.</span></h2>
+          <span class="text-muted">It'll blow your mind.</span>
+        </h2>
+
         <p class="lead">{{product.preamble}}</p>
+
+        {% unless product.description == nil %}
         <p>{{product.description}}</p>
-        <p>Price: {{product.price}}</p>
+        {% endunless %}
+
+        <dl class="dl-horizontal">
+          <dt>Price</dt>
+          <dd>{{product.price}}</dd>
+
+          {% unless product.size == nil %}
+          <dt>Size</dt>
+          <dd>{{product.size}}</dd>
+          {% endunless %}
+
+          {% unless product.closure == nil %}
+          <dt>Closure</dt>
+          <dd>{{product.closure}}</dd>
+          {% endunless %}
+        </dl>
         <p>
           <a class="btn btn-primary"
              href="/img/products/thumb/{{product.img}}"
