--- a/_includes/product-highlight.html
+++ b/_includes/product-highlight.html
@@ -10,7 +10,7 @@
         <p>{{ product.preamble }}</p>
         <p>
           <a class="btn btn-primary"
-             href="/product-info/#{{product.id}}"
+             href="/all-products/#{{product.id}}"
              role="button">View details &raquo;</a>
         </p>
     </div>
