Started adding product straplines

--- a/_includes/product-detail.html
+++ b/_includes/product-detail.html
@@ -25,7 +25,7 @@
         <h2 class="featurette-heading">
           {{product.name}}
           <br />
-          <span class="text-muted">It'll blow your mind.</span>
+          <span class="text-muted">{{product.strapline}}</span>
         </h2>
 
         <p class="lead">{{product.preamble}}</p>
