--- a/_includes/product-detail.html
+++ b/_includes/product-detail.html
@@ -8,7 +8,7 @@
     {% capture rowcycle %}{% cycle 'odd', 'even' %}{% endcapture %}
 
     {% capture image_div %}
-      <div class="col-md-5">
+      <div class="col-md-5 hidden-xs hidden-sm">
         <img src="/img/products/thumb/{{product.img}}"
              class="featurette-image img-responsive img-thumbnail"
              alt="{{product.name}}"
@@ -22,6 +22,14 @@
       {% endif %}
 
       <div class="col-md-7">
+
+        <div class="visible-xs visible-sm" style="float:right;">
+          <img src="/img/products/thumb/{{product.img}}"
+               class="featurette-image img-responsive img-thumbnail"
+               alt="{{product.name}}"
+               style="width: 150px; height: 150px;" />
+        </div>
+
         <h2 class="featurette-heading">
           {{product.name}}
           <br />
