Link to larger image from thumbnails

--- a/_includes/product-highlight.html
+++ b/_includes/product-highlight.html
@@ -1,6 +1,6 @@
 
     <div class="col-sm-4 text-center">
-      <a href="/img/products/thumb/{{product.img}}">
+      <a href="/img/products/full/{{product.img}}">
         <img alt="{{ product.name }}"
              class="img-circle"
              style="width: 140px; height: 140px;"
