--- a/_includes/product-detail.html
+++ b/_includes/product-detail.html
@@ -9,10 +9,12 @@
 
     {% capture image_div %}
       <div class="col-md-5 hidden-xs hidden-sm">
+        <a href="/img/products/full/{{product.img}}">
         <img src="/img/products/thumb/{{product.img}}"
              class="featurette-image img-responsive img-thumbnail"
              alt="{{product.name}}"
              style="width: 300px; height: 300px;" />
+        </a>
       </div>
     {% endcapture %}
 
@@ -24,10 +26,12 @@
       <div class="col-md-7">
 
         <div class="visible-xs visible-sm" style="float:right;">
+          <a href="/img/products/thumb/{{product.img}}">
           <img src="/img/products/thumb/{{product.img}}"
                class="featurette-image img-responsive img-thumbnail"
                alt="{{product.name}}"
                style="width: 150px; height: 150px;" />
+          </a>
         </div>
 
         <h2 class="featurette-heading">
