Hooked up lightbox

--- a/_includes/product-detail.html
+++ b/_includes/product-detail.html
@@ -9,7 +9,9 @@
 
     {% capture image_div %}
       <div class="col-md-5 hidden-xs hidden-sm">
-        <a href="/img/products/full/{{product.img}}">
+        <a href="/img/products/thumb/{{product.img}}"
+           data-toggle="lightbox"
+           data-title="{{product.name}}">
         <img src="/img/products/thumb/{{product.img}}"
              class="featurette-image img-responsive img-thumbnail"
              alt="{{product.name}}"
@@ -26,7 +28,9 @@
       <div class="col-md-7">
 
         <div class="visible-xs visible-sm" style="float:right;">
-          <a href="/img/products/thumb/{{product.img}}">
+          <a href="/img/products/thumb/{{product.img}}"
+           data-toggle="lightbox"
+           data-title="{{product.name}}">
           <img src="/img/products/thumb/{{product.img}}"
                class="featurette-image img-responsive img-thumbnail"
                alt="{{product.name}}"
