Added shipping charges page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,11 @@
 
       <!-- Site footer -->
       <div class="footer">
+        <p class="text-center small">
+          <a href="/shipping.html">Shipping charges</a>
+        </p>
         <p class="text-center">
-            &copy; ecoweave 2014
+          &copy; ecoweave 2014
         </p>
       </div>
 
