Link to full images from thumbnail image links

--- a/_includes/product-detail.html
+++ b/_includes/product-detail.html
@@ -9,7 +9,7 @@
 
     {% capture image_div %}
       <div class="col-md-5 hidden-xs hidden-sm">
-        <a href="/img/products/thumb/{{product.img}}"
+        <a href="/img/products/full/{{product.img}}"
            data-toggle="lightbox"
            data-title="{{product.name}}">
         <img src="/img/products/thumb/{{product.img}}"
@@ -28,7 +28,7 @@
       <div class="col-md-7">
 
         <div class="visible-xs visible-sm" style="float:right;">
-          <a href="/img/products/thumb/{{product.img}}"
+          <a href="/img/products/full/{{product.img}}"
            data-toggle="lightbox"
            data-title="{{product.name}}">
           <img src="/img/products/thumb/{{product.img}}"
