--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,16 +1,19 @@
 
-      <!-- Site footer -->
-      <div class="footer">
-        <p class="text-center small">
-          <a href="/shipping.html">Shipping charges</a>
-        </p>
-        <p class="text-center">
+    </div> <!-- /container -->
+
+    <!-- Site footer -->
+    <div id="footer">
+      <div class="container">
+        <ul class="text-center">
+          <li><a href="/">Home</a></li>
+          <li><a href="/shipping.html">Shipping charges</a></li>
+          <li><a href="/contact/">Contact</a></li>
+        </ul>
+        <p class="text-muted text-center">
           &copy; ecoweave 2014
         </p>
       </div>
-
-    </div> <!-- /container -->
-
+    </div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
