--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
     <!-- Site footer -->
     <div id="footer">
       <div class="container">
-        <ul class="text-center">
+        <ul class="text-center list-unstyled">
           <li><a href="/">Home</a></li>
           <li><a href="/shipping.html">Shipping charges</a></li>
           <li><a href="/contact/">Contact</a></li>
