Added glyph to brand text & hid text on medium screen to prevent wrapping

--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,10 @@ body {
   content: " | ";
 }
 
+.navbar-brand span {
+  color: #606;
+}
+
 .dl-horizontal dt {
   text-align: left;
   width: auto;
