--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -11,7 +11,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Ecoweave</a>
+          <a class="navbar-brand" href="/">
+            <span class="glyphicon glyphicon-th-large"></span>
+            <span class="hidden-sm">Ecoweave</span>
+          </a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
