--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,8 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+
+    {% assign description = site.description %}
+    {% if page.description %}
+      {% assign description = page.description %}
+    {% endif %}
+
+    <meta name="description" content="{{description}}" />
+    <meta name="keywords" content="{{site.keywords | join: ', '}}" />
+    <meta name="author" content="{{site.author}}" />
 
     <title>{{ page.title }}</title>
 
