--- a/_includes/paypal.html
+++ b/_includes/paypal.html
@@ -7,7 +7,10 @@
 {% include buying-options.html %}
 
 <input type="hidden" name="currency_code" value="GBP">
-<input type="submit" class="btn btn-primary" value="Add to basket &raquo;" />
+<input type="submit"
+       class="btn btn-primary"
+       id="{{product.id}}-add-basket-btn"
+       value="Add to basket &raquo;" />
 <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
 </form>
 <!-- END PayPal -->
