--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -6,6 +6,7 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-35974459-1', 'ecoweave.co.uk');
+  ga('require', 'linkid', 'linkid.js');
   ga('send', 'pageview');
 
 </script>
