Increased space between product divs
Fixes #16

--- a/_includes/product-highlight.html
+++ b/_includes/product-highlight.html
@@ -1,5 +1,5 @@
 
-    <div class="col-sm-4 text-center" id="{{product.id}}">
+    <div class="col-sm-4 product-highlight text-center" id="{{product.id}}">
       <a href="/all-products/#{{product.id}}"
          id="{{product.id}}-view-dtls-img">
         <img alt="{{ product.name }}"
