--- a/css/main.css
+++ b/css/main.css
@@ -48,8 +48,8 @@ body {
   margin-left: 70px;
 }
 
-.row {
-  padding-bottom: 40px;
+.product-highlight {
+  margin-bottom: 40px;
 }
 
 .jumbotron {
