--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
     <meta name="keywords" content="{{site.keywords | join: ', '}}" />
     <meta name="author" content="{{site.author}}" />
 
-    <title>{{ page.title }}</title>
+    <title>{{ site.title }} - {{ page.title }}</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
