--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -7,6 +7,5 @@
 
   ga('create', 'UA-35974459-1', 'www.ecoweave.co.uk');
   ga('require', 'linkid', 'linkid.js');
-  ga('send', 'pageview');
-
+  ga('send', 'pageview',  location.pathname + location.search + location.hash);
 </script>
