--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,8 +30,9 @@
                 event.preventDefault();
                 return $(this).ekkoLightbox({
                     onShown: function() {
+                        ga('send', 'event', 'lightbox', 'click', this.id);
                         if (window.console) {
-                            return console.log('Checking our the events huh?');
+                            return console.log('Checking out the events huh?');
                         }
                     }
                 });
