--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -5,7 +5,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-35974459-1', 'www.ecoweave.co.uk');
+  ga('create', 'UA-35974459-1', 'auto');
   ga('require', 'linkid', 'linkid.js');
   ga('send', 'pageview',  location.pathname + location.search + location.hash);
 </script>
