--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,7 +30,11 @@
                 event.preventDefault();
                 return $(this).ekkoLightbox({
                     onShown: function() {
-                        ga('send', 'event', 'lightbox', 'click', this.options.title);
+                        ga('send',
+                           'event',
+                           'Product Image Lightbox',
+                           'click',
+                           this.options.title);
                         if (window.console) {
                             console.log('Checking out the events huh?');
                         }
