--- a/_includes/paypal.html
+++ b/_includes/paypal.html
@@ -1,6 +1,9 @@
 
 <!-- START PayPal -->
-<form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+<form target="paypal"
+      action="https://www.paypal.com/cgi-bin/webscr"
+      method="post"
+      onSubmit="ga('send', 'event', 'Add to basket', 'click', '{{product.name}}');">
 <input type="hidden" name="cmd" value="_s-xclick">
 <input type="hidden" name="hosted_button_id" value="{{product.paypal-id}}">
 
