--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,7 @@
         <ul class="text-center list-unstyled">
           <li><a href="/">Home</a></li>
           <li><a href="/shipping.html">Shipping charges</a></li>
+          <li><a href="/credits.html">Site credits</a></li>
           <li><a href="/contact/">Contact</a></li>
         </ul>
         <p class="text-muted text-center">
