--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
           <li><a href="/contact/">Contact</a></li>
         </ul>
         <p class="text-muted text-center">
-          &copy; ecoweave 2017
+          &copy; ecoweave <script>document.write(new Date().getFullYear());</script>
         </p>
       </div>
     </div>
