Deal with non-standard option
Hide the colour list if we don't have any standard products

--- a/_includes/buying-options.html
+++ b/_includes/buying-options.html
@@ -24,6 +24,7 @@
     </select>
   </dd>
 
+  {% if product.options contains 'Standard' %}
   <dt id="{{product.id}}-colours-dt">
     <input type="hidden" name="on1" value="Colour">Colour
   </dt>
@@ -46,6 +47,7 @@
       <option value="Not Applicable" style="display:none;">Not Applicable </option>
     </select>
   </dd>
+    {% endif %}
 </dl>
 
 <script type="text/javascript">
